# 4D-Radar-Odometry

./: .gitignore  README.md
config/: calibration.ini  perception.ini  system.yaml
rviz/: 4d_radar_odometry.rviz  ntu.rviz
src/app/localization/radar_odometry/: CMakeLists.txt  package.xml
src/app/localization/radar_odometry/include/: point_type.hpp  radar_odometry_node.hpp
src/app/localization/radar_odometry/launch/: radar_odometry.launch
src/app/localization/radar_odometry/src/: radar_odometry_node.cpp
src/app/localization/radar_odometry_ros/: CMakeLists.txt  package.xml
src/app/localization/radar_odometry_ros/include/: radar_odometry.hpp  radar_odometry_node.hpp
src/app/localization/radar_odometry_ros/include/algorithm/: adaptive_threshold.hpp  ego_motion_compensation.hpp  preprocessing.hpp  registration.hpp  voxel_hash_map.hpp
src/app/localization/radar_odometry_ros/include/evaluation/: ntu_evaluation.hpp  vod_evaluation.hpp
src/app/localization/radar_odometry_ros/include/types/: point_type.hpp
src/app/localization/radar_odometry_ros/launch/: radar_odometry.launch
src/app/localization/radar_odometry_ros/rviz/: ntu_eval.rviz  radar_odom.rviz  vod_eval.rviz
src/app/localization/radar_odometry_ros/src/: radar_odometry.cpp  radar_odometry_node.cpp
src/app/localization/radar_odometry_ros/src/algorithm/: adaptive_threshold.cpp  ego_motion_compensation.cpp  preprocessing.cpp  registration.cpp  voxel_hash_map.cpp
src/app/localization/radar_odometry_ros/src/evaluation/: ntu_evaluation.cpp  vod_evaluation.cpp
src/app/utils/autoku_utils/: CMakeLists.txt  package.xml
src/app/utils/autoku_utils/include/: atom_task.h  csaps.h  cubic_spiral.h  ini_parser.h  simple_ini.h  spline.h
src/app/utils/autoku_utils/src/: csaps.cpp  cubic_spiral.cpp  ini_parser.cpp  spline.cpp
src/app/utils/lanelet2/lanelet2_core/include/lanelet2_core/: Attribute.h
src/app/utils/lanelet2/lanelet2_core/include/lanelet2_core/primitives/: Lanelet.h
src/app/utils/lanelet2/lanelet2_core/src/: Lanelet.cpp
src/bsw/cam_info/: CMakeLists.txt  package.xml
src/bsw/cam_info/launch/: cam_info.launch
src/bsw/cam_info/src/: cam_info.cpp
src/bsw/kusv_can_to_geo/: CMakeLists.txt  package.xml
src/bsw/kusv_can_to_geo/launch/: kusv_can_to_geo.launch
src/bsw/kusv_can_to_geo/msg/: kusv_CanInfo.msg
src/bsw/kusv_can_to_geo/src/: kusv_can_to_geo.cpp
src/bsw/kvaser_interface/: CMakeLists.txt  package.xml
src/bsw/kvaser_interface/include/kvaser_interface/: kvaser_interface.h
src/bsw/kvaser_interface/launch/: kvaser_can_bridge.launch
src/bsw/kvaser_interface/src/: kvaser_can_bridge.cpp  kvaser_interface.cpp
src/bsw/novatel_oem7_driver/config/: oem7_supported_imus.yaml  std_init_commands.yaml
src/bsw/ros_can/: CMakeLists.txt  package.xml
src/bsw/ros_can/launch/: ros_can.launch
src/bsw/ros_can/src/: CAN_rx.cpp
src/bsw/velodyne/velodyne_pointcloud/launch/: VLP-32C_points.launch
src/bsw/velodyne_driver2/: CMakeLists.txt  package.xml
src/bsw/velodyne_driver2/calibration/: VELARRAY-H800.xml  VELARRAY-M1600.xml  VLS-128_FS1.xml
src/bsw/velodyne_driver2/config/: lidar_driver_velarray_h800.cfg  lidar_driver_velarray_m1600.cfg  lidar_driver_vlp16.cfg  lidar_driver_vlp32c.cfg  lidar_driver_vls128.cfg
src/bsw/velodyne_driver2/driver/: ros-noetic-velodyne-lidar-driver_2.7.0-23.01.30.1915_focal_amd64.deb  velodyne-lidar-driver_2.7.0-23.01.30.1915_focal_amd64.deb
src/bsw/velodyne_driver2/launch/: VLP-32C.launch
src/interface/: ekf_common_struct.hpp  function_control.hpp  function_objects.hpp  function_print.hpp  function_trajectories.hpp  function_vehicle_state.hpp  interface_constants.hpp  interface_control_points.hpp  interface_novatel.hpp  interface_objects.hpp  interface_trajectories.hpp  interface_vehicle_can.hpp  interface_vehicle_state.hpp  pointXYZIT.hpp  rosbridge_control_points.hpp  rosbridge_novatel.hpp  rosbridge_objects.hpp  rosbridge_pointcloud.hpp  rosbridge_time.hpp  rosbridge_trajectories.hpp  rosbridge_vehicle_state.hpp
src/rte/msg/autoku_msgs/: CMakeLists.txt  package.xml
src/rte/msg/autoku_msgs/msg/: ADModeInput.msg  BrakeTempCAN.msg  DetectObject.msg  DetectObjects.msg  FrameFD.msg  Gnss.msg  IMMModelProbability.msg  MapInfo.msg  Motion.msg  ObjectState.msg  Position.msg  PredictObject.msg  PredictObjects.msg  SirenOnOff.msg  ThreeSecsCAN.msg  TrackObject.msg  TrackObjects.msg  Trajectories.msg  Trajectory.msg  TrajectoryBoundary.msg  TrajectoryBoundaryPoint.msg  TrajectoryPoint.msg  VehicleCAN.msg  VehicleCmd.msg  VehicleState.msg
src/rte/msg/carmaker_msgs/: CMakeLists.txt  package.xml
src/rte/msg/carmaker_msgs/msg/: Control_Signal.msg  GNSS.msg  Object.msg  ObjectState.msg  Objects.msg  UAQ_Out.msg
src/rte/msg/carmaker_msgs/srv/: Init.srv
src/rte/msg/localization_msgs/: CMakeLists.txt  package.xml
src/rte/msg/localization_msgs/msg/: Correction.msg  EgoState.msg  Gnss.msg  PolyLines.msg
src/rte/msg/mobileye_msgs/: CMakeLists.txt  package.xml
src/rte/msg/mobileye_msgs/msg/: CarInfo.msg  ExtLogData.msg  Gyro.msg  LKA.msg  LKAlane.msg  Lane.msg  MobileyeInfo.msg  ObstacleData.msg  ObstacleStatus.msg  ReferencePoints.msg  SeeQ.msg  SmartADAS.msg  StandardCAN.msg  SystemWarnings.msg  TSR.msg  TSRVisionOnlySign.msg
src/rte/msg/perception_msg/: CMakeLists.txt  package.xml
src/rte/msg/perception_msg/msg/: CoreInfo.msg  Curbs.msg  Curve.msg  EndPoints.msg  FreeSpaceInfo.msg  FreeSpaceInfos.msg  Indices.msg  Lane.msg  LidarFrameMsg.msg  Matrix3f.msg  Object.msg  Objects.msg  PerceptionMsg.msg  Point3d.msg  Point3f.msg  Point4f.msg  Pose.msg  SupplementInfo.msg
src/rte/tf/tf_dynamic/: CMakeLists.txt  package.xml
src/rte/tf/tf_dynamic/launch/: tf_dynamic.launch
src/rte/tf/tf_dynamic/src/: tf_dynamic.py
src/rte/tf/tf_static/: CMakeLists.txt  package.xml
src/rte/tf/tf_static/launch/: tf_static.launch
src/rte/tf/tf_static/src/: tf_static.py
