<?xml version="1.0"?>
<package format="2">
  <name>radar_odometry</name>
  <version>0.0.0</version>
  <description>The radar_odometry package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="wodud3743@gmail.com">JaeyoungJo</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>autoku_msgs</build_depend>  
  <build_depend>autoku_utils</build_depend>
  <build_depend>novatel_oem7_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>autoku_msgs</build_export_depend>
  <build_export_depend>autoku_utils</build_export_depend>
  <build_export_depend>novatel_oem7_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>autoku_msgs</exec_depend>
  <exec_depend>autoku_utils</exec_depend>
  <exec_depend>novatel_oem7_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
